Fixed backgrounds and z-index

--- a/src/index.css
+++ b/src/index.css
@@ -16,6 +16,10 @@ code {
     monospace;
 }
 
+#cities-form, .weatherForToday {
+  z-index: 2;
+}
+
 /* the weather info blocks: */
 .weatherForToday {
   border: solid 3px tomato;
@@ -48,7 +52,7 @@ code {
 .bg {
   width: 100%;
   height: 100%;
-  z-index: -1;
+  z-index: 1;
   position: absolute;
 }
 
